# pill-care

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
data/: 117_DT_11781_N002_Y_20260414183922.csv  README.md  ingredient_synonyms.json  metadata.json
data/gold_set/v1/: README.md  dur_pairs.csv  guidance_text.csv  naturalness.csv  red_team.csv  symptom_mapping.csv
docs/proposal/2026-demo-submission/: README.md  linguistic-policy-check.md  proposal-5p-draft.md  proposal-5p.html  section-1-overview.md  section-2-technical.md  section-3-implementation.md  typesetting-notes.md
docs/research/: 2026-04-17-design-review-synthesis.md
docs/superpowers/plans/: 2026-04-11-pillcare-poc.md  2026-04-15-medication-guidance-pipeline.md  2026-04-16-gcp-cloud-deployment.md  2026-04-16-medication-guidance-pipeline-v2.md  2026-04-17-dependency-update.md  2026-04-17-pillcare-v2-demo-m2.md
docs/superpowers/specs/: 2026-04-11-pillcare-design.md  2026-04-15-medication-guidance-data-design.md  2026-04-16-gcp-cloud-deployment.md  2026-04-16-gcp-deploy-runbook.md  2026-04-16-langgraph-agent-architecture.md  2026-04-17-dependency-update-design.md  2026-04-17-pillcare-proposal-v2-design.md
person_sample/: 개인투약이력 가정의학과.xls  개인투약이력 안과.xls
research/: track-1-problem-validation.md  track-2-competitor-landscape.md  track-3-data-sources.md  track-4-regulatory.md  track-5-ai-trends.md  track-6-udkg-rag-agent-deepdive.md
scripts/: build_ingredient_synonyms.py  build_proposal_pdf.sh  crawl_bundle.py  crawl_drug_permit.py  crawl_easy_drug.py  download_kure_model.py  download_nli_model.py
src/pillcare/: __init__.py  app.py  critic.py  db_builder.py  drug_info.py  drug_matcher.py  dur_checker.py  dur_normalizer.py  gcs_loader.py  guardrails.py  history_parser.py  intent_classifier.py  llm_factory.py  logging_config.py  nli_gate.py  observability.py  pipeline.py  prompts.py  schemas.py  tools.py  xml_parser.py
src/pillcare/_data/: ingredient_synonyms_manual.json
src/pillcare/eval/: gold_set.py  ragas_eval.py  run_gold_eval.py
tests/: conftest.py  test_critic.py  test_db_builder.py  test_drug_info.py  test_drug_matcher.py  test_dur_checker.py  test_dur_normalizer.py  test_eval.py  test_gcs_loader.py  test_guardrails.py  test_history_parser.py  test_intent_classifier.py  test_llm_factory.py  test_nli_gate.py  test_pipeline.py  test_schemas.py  test_xml_parser.py
tests/fixtures/: sample_history.json  sample_nb_doc.xml  small_dur.csv  small_easy.json  small_permit.json
tests/fixtures/hira_dur_v2026/: README.md  age_prohibition.csv  combined_prohibition.csv  dose_warning.csv  duplicate_therapy.csv  elderly_warning.csv  pregnancy_prohibition.csv  pregnant_woman.csv  specific_age.csv
